--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: FallenWorld
 brief-intro: 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "fallenworld.github.io" # the base hostname & protocol for your site
+url: "https://gaohaoyang.github.io" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
