--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: FallenWorld
+title: FallenWorld的博客
 brief-intro: 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gaohaoyang.github.io" # the base hostname & protocol for your site
@@ -36,7 +36,7 @@ disqus_shortname:
 # hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
 # xxxxx字符串
 baidu_tongji_id: 
-google_analytics_id:
+google_analytics_id: UA-74683316-1
 
 # Build settings
 markdown: kramdown
